[gd_scene load_steps=19 format=3 uid="uid://bon7uei67jc1c"]

[ext_resource type="Script" path="res://elements/player/Mairo.gd" id="1_78jrx"]
[ext_resource type="Script" path="res://elements/player/Pointer.gd" id="2_yn16c"]
[ext_resource type="Texture2D" uid="uid://crjy2a5py7sa3" path="res://sprites/Makarov.png" id="3_gbfw0"]
[ext_resource type="PackedScene" uid="uid://btracnbahm4f3" path="res://elements/player/mairo.tscn" id="4_2ahjb"]
[ext_resource type="Script" path="res://elements/player/ParticulasArma.gd" id="4_njrt0"]
[ext_resource type="PackedScene" uid="uid://hiqt6u7ucx8l" path="res://elements/player/animation_player.tscn" id="5_gw41m"]
[ext_resource type="Texture2D" uid="uid://egcojbs75mb2" path="res://sprites/BracoMario.png" id="5_pcjfw"]
[ext_resource type="PackedScene" uid="uid://c2ig3hjoji8d2" path="res://elements/player/camera_2d.tscn" id="6_6t6e0"]
[ext_resource type="Texture2D" uid="uid://dsgvsipikyoue" path="res://sprites/mairoSemBraco.png" id="7_mn2of"]
[ext_resource type="Script" path="res://elements/player/camera_2d.gd" id="7_negal"]
[ext_resource type="PackedScene" uid="uid://5mnjapp0jcoo" path="res://elements/player/collision_shape_2d.tscn" id="8_5qm54"]

[sub_resource type="Curve" id="Curve_vy5qj"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.587121, -360), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_3bxod"]
curve = SubResource("Curve_vy5qj")

[sub_resource type="Gradient" id="Gradient_ice8b"]
offsets = PackedFloat32Array(0, 0.0176991, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.74064, 0.657836, 0, 1, 0.937255, 0.176471, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ouhsj"]
gradient = SubResource("Gradient_ice8b")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3e5py"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.67
angle_max = 720.0
angle_curve = SubResource("CurveTexture_3bxod")
spread = 88.832
flatness = 1.0
initial_velocity_min = 10000.0
initial_velocity_max = 10000.0
radial_velocity_min = -90.91
radial_velocity_max = 272.73
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 8.0
color_initial_ramp = SubResource("GradientTexture1D_ouhsj")
turbulence_noise_strength = 20.0
collision_mode = 1
collision_friction = 0.0
collision_bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bi2s1"]
radius = 299.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6jkyt"]
size = Vector2(73, 20)

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(113, 222)
script = ExtResource("1_78jrx")

[node name="Pointer" type="Node2D" parent="."]
position = Vector2(1, 0)
script = ExtResource("2_yn16c")

[node name="Tiro" type="RayCast2D" parent="Pointer"]
rotation = 3.16254
scale = Vector2(1, 10)
target_position = Vector2(296, 0)
collision_mask = 2
collide_with_areas = true

[node name="Arma" type="Sprite2D" parent="Pointer/Tiro"]
position = Vector2(106.809, -1.02394)
rotation = 3.14159
scale = Vector2(2.001, 0.22)
texture = ExtResource("3_gbfw0")

[node name="ParticulasArma" type="GPUParticles2D" parent="Pointer/Tiro/Arma"]
position = Vector2(-16.2082, -8.54092)
rotation = -3.14157
scale = Vector2(0.25, 2.27273)
skew = -2.2769e-05
emitting = false
amount = 200
process_material = SubResource("ParticleProcessMaterial_3e5py")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.1
trail_sections = 2
trail_section_subdivisions = 88
script = ExtResource("4_njrt0")

[node name="Braco" type="Sprite2D" parent="Pointer/Tiro/Arma"]
position = Vector2(49.8183, 6.01807)
rotation = -3.14157
scale = Vector2(0.93126, 1.18926)
skew = -2.12193e-05
texture = ExtResource("5_pcjfw")
offset = Vector2(21.9445, 3.01954)

[node name="raioMira" type="CollisionShape2D" parent="Pointer"]
shape = SubResource("CircleShape2D_bi2s1")

[node name="Mairo" parent="." instance=ExtResource("4_2ahjb")]
position = Vector2(5, 4)
scale = Vector2(-2.375, 2.375)
texture = ExtResource("7_mn2of")

[node name="AnimationPlayer" parent="." instance=ExtResource("5_gw41m")]

[node name="Camera2D" parent="." instance=ExtResource("6_6t6e0")]
script = ExtResource("7_negal")

[node name="PlayerCollision" parent="." instance=ExtResource("8_5qm54")]
position = Vector2(4, 57)
shape = SubResource("RectangleShape2D_6jkyt")

[connection signal="child_order_changed" from="Pointer" to="Pointer" method="_on_child_order_changed"]
[connection signal="finished" from="Pointer/Tiro/Arma/ParticulasArma" to="Pointer" method="_on_particulas_arma_finished"]
